features page and notification fix

--- a/recruit-gui/src/assets/i18n/de.json
+++ b/recruit-gui/src/assets/i18n/de.json
@@ -98,6 +98,7 @@
 	"arenella-app-menu-contact": "Kontakt",
 	"arenella-app-menu-emails": "E-Mails",
 	"arenella-app-menu-faq": "Faq",
+	"arenella-app-menu-features": "Produkte",
 	"arenella-app-menu-job-board": "Jobbörse",
 	"arenella-app-menu-jobs": "Jobs",
 	"arenella-app-menu-login": "Anmeldung",
@@ -836,6 +837,40 @@
 	"expres": "Expres",
 	"EXPRES": "Expres",
 	"failure": "Versagen",
+	"featier-cv-database-title (2)": "Kandidaten-Lebenslaufdatenbank",
+	"feature-cv-database-profile-page-itm1": "Suche mit herkömmlichen Suchfiltern",
+	"feature-cv-database-profile-page-itm2": "Suchen Sie, indem Sie eine Kopie der Stellenbeschreibung einfügen oder hochladen.",
+	"feature-cv-database-profile-page-itm3": "Suchen Sie, indem Sie Ihre Anforderungen direkt in das Suchfeld eingeben.",
+	"feature-cv-database-profile-page-itm4": "Sichern Sie sich interessante IT-Kandidaten",
+	"feature-cv-database-profile-page-itm5": "Lebensläufe von IT-Kandidaten direkt im Browser ansehen",
+	"feature-cv-database-profile-page-itm6": "Laden Sie die Originalversion des Lebenslaufs für IT-Kandidaten herunter.",
+	"feature-cv-database-profile-page-itm7": "Erstellen Sie gespeicherte Suchanfragen",
+	"feature-cv-database-profile-page-itm8": "Erhalten Sie Benachrichtigungen, wenn neue IT-Kandidaten hinzugefügt werden, die einer gespeicherten Suchanfrage entsprechen.",
+	"feature-cv-database-profile-page-p1": "Die Funktion „Kandidaten-Lebenslaufdatenbank“ ermöglicht Ihnen Folgendes:",
+	"feature-cv-database-profile-page-title": "Profilseite für IT-Kandidaten",
+	"feature-cv-database-search-page-p1": "Die Datenbank mit Lebensläufen von IT-Kandidaten ermöglicht es Personalverantwortlichen, in bestehenden Kandidatenprofilen zu suchen. Ihnen stehen erweiterte Suchfunktionen zur Verfügung, um genau die Kandidaten zu finden, die Sie suchen.",
+	"feature-cv-database-search-page-p2": "Das System liefert Ihnen anhand Ihrer Suchkriterien die besten verfügbaren Treffer. Sollte ein Kandidat nicht exakt Ihren Anforderungen entsprechen, wird Ihnen die Genauigkeit jedes einzelnen Treffers angezeigt, sodass Sie entscheiden können, ob der Kandidat Ihren Bedürfnissen entspricht.",
+	"feature-cv-database-search-page-title": "IT-Kandidatensucheseite",
+	"feature-cv-database-title": "Kandidaten-Lebenslaufdatenbank",
+	"feature-im-title": "IT-Instant Messaging",
+	"feature-im-view-cv": "Lebensläufe von IT-Kandidaten ansehen",
+	"feature-im-view-cv-p1": "Die Instant-Messaging-Funktion ermöglicht es IT-Recruitern, in Echtzeit mit IT-Kandidaten zu chatten. Ist der Kandidat nicht online, erhält er eine E-Mail mit dem Hinweis auf eine ungelesene Nachricht und kann Sie später kontaktieren.",
+	"feature-im-view-cv-p2": "Während Sie die Chat-Funktion nutzen, können Sie auch eine Kopie des Lebenslaufs in einem separaten Fenster öffnen. So haben Sie alle wichtigen Informationen griffbereit, wenn Sie mit den Kandidaten sprechen.",
+	"feature-im-view-profile": "Profil eines IT-Kandidaten ansehen",
+	"feature-im-view-profile-p1": "Während Sie mit einem IT-Kandidaten chatten, können Sie auch eine Zusammenfassung seines Profils in einem separaten Fenster öffnen. So sehen Sie die wichtigsten Informationen über die IT-Kandidaten übersichtlich dargestellt und können die benötigten Informationen schnell finden, ohne den gesamten Lebenslauf lesen zu müssen.",
+	"feature-jobboard-p1": "The IT Job board allows IT recruiters to advertise their open positions directly to the candidates. The IT Candidates that visit the job board are able to view details of the roles being advertised and apply directly if they think they will be a good fit for the positions.",
+	"feature-jobboard-p2": "Wenn Sie eine Stelle auf der IT-Jobbörse veröffentlichen, werden alle IT-Kandidaten mit einer Benachrichtigung per E-Mail informiert. Die Benachrichtigungen sind auf die gewünschte Position des jeweiligen Kandidaten zugeschnitten. Das bedeutet, dass Kandidaten, die eine Benachrichtigung erhalten, genau nach der von Ihnen ausgeschriebenen Stelle suchen. Kandidaten können auch dann eine Benachrichtigung erstellen, wenn sie nicht auf der Website registriert sind. Dadurch ergeben sich mehr Möglichkeiten, geeignete IT-Kandidaten zu finden, als wenn Sie nur die Lebenslaufdatenbank nutzen.",
+	"feature-jobboard-p3": "Die IT-Jobbörse bietet IT-Kandidaten die Möglichkeit, nach bestimmten Regionen wie Benelux, DACH oder Südeuropa zu filtern. Sie können außerdem nach einzelnen Ländern und Vertragsarten filtern, um schnell passende IT-Jobs oder IT-Verträge zu finden.",
+	"feature-jobboard-title": "IT-Jobbörse",
+	"feature-marketplace-offers": "Angebot für IT-Kandidaten",
+	"feature-marketplace-offers-p1": "Der IT-Marktplatz enthält eine Liste offener IT-Stellen, für die Kandidaten gesucht werden. Diese Stellen werden üblicherweise von IT-Personalagenturen ausgeschrieben, die eine Position zu besetzen haben und offen für die Zusammenarbeit mit anderen IT-Personalagenturen sind, um diese Stelle zu besetzen.",
+	"feature-marketplace-offers-p2": "Der IT-Marktplatz dient als erste Anlaufstelle. Sie können die Stellenbeschreibung einsehen und, falls Sie einen geeigneten Kandidaten haben oder finden können, die IT-Agentur kontaktieren, die die Stelle ausgeschrieben hat. So können Sie den Vertrag und die Provision im Falle einer erfolgreichen Vermittlung aushandeln.v",
+	"feature-marketplace-requests": "IT-Kandidaten anfordern",
+	"feature-marketplace-requests-p1": "Der IT-Marktplatz ermöglicht es Ihnen als IT-Personalvermittler, offene IT-Stellen auszuschreiben, für die Sie Unterstützung benötigen. Andere IT-Personalvermittler können die Stellenbeschreibung einsehen und Sie direkt kontaktieren, um Ihnen geeignete Kandidaten vorzuschlagen.",
+	"feature-marketplace-title": "IT-Marktplatz",
+	"feature-newsfeed-p1": "Der Newsfeed ähnelt dem, was man von den meisten Social-Media-Plattformen kennt. Er dient als Plattform für IT-Recruiter und IT-Kandidaten, um Informationen über offene IT-Stellen, die Verfügbarkeit von IT-Fachkräften und alles, was für den europäischen IT-Arbeitsmarkt relevant ist, zu veröffentlichen.",
+	"feature-newsfeed-p2": "Über den Newsfeed können Sie Beiträge erstellen, auf die Beiträge anderer Personalvermittler und Kandidaten antworten und diese mit „Gefällt mir“ markieren. Im Falle von Kandidaten können Sie den Newsfeed auch nutzen, um eine Sofortnachricht zu senden und deren Profil oder Lebenslauf einzusehen.",
+	"feature-newsfeed-title": "IT-Newsfeed",
 	"FINLAND": "Finnland",
 	"FINNISH": "Finnisch",
 	"FINTECH": "Fintech",
