--- a/recruit-gui/src/assets/i18n/en.json
+++ b/recruit-gui/src/assets/i18n/en.json
@@ -98,6 +98,7 @@
 	"arenella-app-menu-contact": "Contact",
 	"arenella-app-menu-emails": "Emails",
 	"arenella-app-menu-faq": "Faq",
+	"arenella-app-menu-features": "Products",
 	"arenella-app-menu-job-board": "Job Board",
 	"arenella-app-menu-jobs": "Jobs",
 	"arenella-app-menu-login": "Login",
@@ -836,6 +837,40 @@
 	"expres": "Expres",
 	"EXPRES": "Expres",
 	"failure": "Failure",
+	"featier-cv-database-title (2)": "Candidate CV Database",
+	"feature-cv-database-profile-page-itm1": "Search using traditional search filters",
+	"feature-cv-database-profile-page-itm2": "Search by pasting or uploading a copy of the job specification",
+	"feature-cv-database-profile-page-itm3": "Search by typing your requirements directly into the search box",
+	"feature-cv-database-profile-page-itm4": "Save interesting IT candidates",
+	"feature-cv-database-profile-page-itm5": "View IT Candidates CV's in-line",
+	"feature-cv-database-profile-page-itm6": "Download the original version of the IT Candidates CV",
+	"feature-cv-database-profile-page-itm7": "Create saved search queries",
+	"feature-cv-database-profile-page-itm8": "Receive alerts when new IT Candidates matching a saved query are added",
+	"feature-cv-database-profile-page-p1": "The Candidate CV Database feature allows you to do the following",
+	"feature-cv-database-profile-page-title": "IT Candidate Profile Page",
+	"feature-cv-database-search-page-p1": "The IT candidate CV database allows recruiters to search on existing candidate profiles. You are provided with advanced search capabilities to find the exact candidates that you are looking for.",
+	"feature-cv-database-search-page-p2": "The system will, based upon your search criteria, return the best available matches. Where a candidate is not an exact match you will be shown the accuracy or each of the returned candidates, allowing you to determine if the candidate is suitable for your needs.",
+	"feature-cv-database-search-page-title": "IT Candidate Search Page",
+	"feature-cv-database-title": "Candidate CV Database",
+	"feature-im-title": "IT Instant Messaging",
+	"feature-im-view-cv": "Viewing IT Candidate CV's",
+	"feature-im-view-cv-p1": "The instant messaging feature allows IT recruiters to chat in real time with IT candidates. If the candidate is not online they will receive an email alerting them to an unread message and be able to contact you later on.",
+	"feature-im-view-cv-p2": "While you are using the Instant messaging chat feature you will also be able to open a copy of their CV in a separate window. This allows you to have all the details to hand when you are speaking to the candidates.",
+	"feature-im-view-profile": "Viewing IT Candidate Profile",
+	"feature-im-view-profile-p1": "While you are chatting with an IT Candidate you can also open a summary of their profile in a separate window. This allows you to see the most important information about the IT candidates in a structured format, meaning you can easily find the information you need without the need to read through their entire CV.",
+	"feature-jobboard-p1": "The IT Job board allows IT recruiters to advertise their open positions directly to the candidates. The IT Candidates that visit the job board are able to view details of the roles being advertised and apply directly if they think they will be a good fit for the positions.",
+	"feature-jobboard-p2": "When you post on the IT Job board any IT Candidate with an alert will be e-mailed. The alerts are tailored to the individual candidate's desired role which means that Candidates who receive the alert will be looking for the type of role that you are advertising. Candidates are able to create an alert even when they are not registered on the site. Providing more opportunities to find a suitable IT candidate than just using the CV database in isolation.",
+	"feature-jobboard-p3": "The IT Job board provides the IT Candidates with the possibility to filter on specific zones such as the Benelux, DACH or Southern Europe. They are also able to filter on individual countries and contract types to quickly find suitable IT jobs or IT contracts.",
+	"feature-jobboard-title": "IT Job board",
+	"feature-marketplace-offers": "Offer IT Candidates",
+	"feature-marketplace-offers-p1": "The IT Marketplace contains a list of open IT roles that require candidates. These IT roles are usually advertised by IT recruitment agencies that have a role they need to fill and are open to working with other IT recruitment agencies to fill that role.",
+	"feature-marketplace-offers-p2": "The IT Marketplace provides a point of first contact. You can read the job specification and if you have, or can find a suitable candidate you can contact the IT agency advertising the role and work out the contract and margin between you in the event of a successful candidate placement.",
+	"feature-marketplace-requests": "Request IT Candidates",
+	"feature-marketplace-requests-p1": "The IT Marketplace allows you, as an IT recruiter to advertise an open IT position that you need help filling. Other IT recruiters will be able  to read the job description and contact you directly to propose suitable IT candidates that they have available.",
+	"feature-marketplace-title": "IT Marketplace",
+	"feature-newsfeed-p1": "The news feed is similar to what you would expect to find on most social media sites. It is a place where both IT recruiters and IT candidates can come together to post information about open IT roles, IT candidate availability or anything relevant to the IT job market in Europe.",
+	"feature-newsfeed-p2": "The news feed allows you to create posts, respond to and like the posts of other recruiters and candidates and in the case of Candidates you can also use the newsfeed to start an instant messaging session and view their profile or CV.",
+	"feature-newsfeed-title": "IT News feed",
 	"FINLAND": "Finland",
 	"FINNISH": "Finnish",
 	"FINTECH": "Fintech",
