--- a/recruit-gui/src/assets/i18n/es.json
+++ b/recruit-gui/src/assets/i18n/es.json
@@ -98,6 +98,7 @@
 	"arenella-app-menu-contact": "Contacto",
 	"arenella-app-menu-emails": "Correos",
 	"arenella-app-menu-faq": "Faq",
+	"arenella-app-menu-features": "Productos",
 	"arenella-app-menu-job-board": "Trabajo",
 	"arenella-app-menu-jobs": "Empleos",
 	"arenella-app-menu-login": "Acceso",
@@ -836,6 +837,40 @@
 	"expres": "Expres",
 	"EXPRES": "Expres",
 	"failure": "Falla",
+	"featier-cv-database-title (2)": "Base de datos de CV de candidatos",
+	"feature-cv-database-profile-page-itm1": "Buscar utilizando filtros de búsqueda tradicionales",
+	"feature-cv-database-profile-page-itm2": "Busque pegando o cargando una copia de la especificación del trabajo",
+	"feature-cv-database-profile-page-itm3": "Busque escribiendo sus requisitos directamente en el cuadro de búsqueda",
+	"feature-cv-database-profile-page-itm4": "Guardar interesantes candidatos de TI",
+	"feature-cv-database-profile-page-itm5": "er CV de candidatos de TI en línea",
+	"feature-cv-database-profile-page-itm6": "Descargar la versión original del CV de Candidatos de TI",
+	"feature-cv-database-profile-page-itm7": "Crear consultas de búsqueda guardadas",
+	"feature-cv-database-profile-page-itm8": "Recibir alertas cuando se agreguen nuevos candidatos de TI que coincidan con una consulta guardada",
+	"feature-cv-database-profile-page-p1": "La función de base de datos de CV de candidatos le permite hacer lo siguiente",
+	"feature-cv-database-profile-page-title": "Página de perfil del candidato de TI",
+	"feature-cv-database-search-page-p1": "La base de datos de CV de candidatos de TI permite a los reclutadores buscar entre los perfiles de candidatos existentes. Cuenta con funciones de búsqueda avanzada para encontrar exactamente a los candidatos que busca.",
+	"feature-cv-database-search-page-p2": "El sistema, basándose en sus criterios de búsqueda, mostrará las mejores coincidencias disponibles. Si un candidato no coincide exactamente, se le mostrará la precisión de cada uno de los candidatos encontrados, lo que le permitirá determinar si se ajusta a sus necesidades.",
+	"feature-cv-database-search-page-title": "Página de búsqueda de candidatos de TI",
+	"feature-cv-database-title": "Base de datos de CV de candidatos",
+	"feature-im-title": "Mensajería instantánea de TI",
+	"feature-im-view-cv": "Visualización de CV de candidatos de TI",
+	"feature-im-view-cv-p1": "La función de mensajería instantánea permite a los reclutadores de TI chatear en tiempo real con los candidatos. Si el candidato no está conectado, recibirá un correo electrónico avisándole de un mensaje sin leer y podrá contactarle más tarde.",
+	"feature-im-view-cv-p2": "Mientras usas el chat de mensajería instantánea, también podrás abrir una copia de su CV en una ventana aparte. Esto te permite tener todos los detalles a mano al hablar con los candidatos.",
+	"feature-im-view-profile": "Visualización del perfil del candidato de TI",
+	"feature-im-view-profile-p1": "Mientras chateas con un candidato de TI, también puedes abrir un resumen de su perfil en una ventana aparte. Esto te permite ver la información más importante del candidato de TI en un formato estructurado, lo que te permite encontrar fácilmente la información que necesitas sin tener que leer todo su CV.",
+	"feature-jobboard-p1": "La bolsa de trabajo de TI permite a los reclutadores de TI anunciar sus vacantes directamente a los candidatos. Los candidatos de TI que visitan la bolsa de trabajo pueden ver los detalles de las vacantes anunciadas y postularse directamente si consideran que son adecuados para el puesto.",
+	"feature-jobboard-p2": "Al publicar una oferta en la bolsa de trabajo de TI, cualquier candidato de TI con una alerta recibirá un correo electrónico. Las alertas se adaptan al puesto deseado por cada candidato, lo que significa que quienes las reciban estarán buscando el tipo de puesto que usted anuncia. Los candidatos pueden crear una alerta incluso si no están registrados en el sitio. Esto ofrece más oportunidades para encontrar un candidato de TI adecuado que simplemente usar la base de datos de CV de forma aislada.",
+	"feature-jobboard-p3": "La bolsa de trabajo de TI ofrece a los candidatos la posibilidad de filtrar por zonas específicas como Benelux, DACH o el sur de Europa. También pueden filtrar por países y tipos de contrato para encontrar rápidamente empleos o contratos de TI adecuados.",
+	"feature-jobboard-title": "Bolsa de trabajo de TI",
+	"feature-marketplace-offers": "Oferta candidatos de TI",
+	"feature-marketplace-offers-p1": "El Mercado de TI contiene una lista de puestos vacantes de TI que requieren candidatos. Estos puestos suelen ser anunciados por agencias de reclutamiento de TI que necesitan cubrir un puesto y están dispuestas a colaborar con otras agencias para cubrirlo.",
+	"feature-marketplace-offers-p2": "El Mercado de TI ofrece un primer punto de contacto. Puede consultar las especificaciones del puesto y, si tiene o encuentra un candidato adecuado, puede contactar con la agencia de TI que anuncia el puesto y acordar el contrato y el margen de beneficio en caso de que el candidato sea seleccionado.",
+	"feature-marketplace-requests": "Solicitar candidatos de TI",
+	"feature-marketplace-requests-p1": "El Mercado de TI te permite, como reclutador de TI, anunciar una vacante de TI que necesitas cubrir. Otros reclutadores de TI podrán leer la descripción del puesto y contactarte directamente para proponerte candidatos de TI adecuados que tengan disponibles.",
+	"feature-marketplace-title": "Mercado de TI",
+	"feature-newsfeed-p1": "El canal de noticias es similar al que se encuentra en la mayoría de las redes sociales. Es un espacio donde tanto reclutadores como candidatos de TI pueden reunirse para publicar información sobre vacantes de TI, la disponibilidad de candidatos de TI o cualquier tema relevante para el mercado laboral de TI en Europa.",
+	"feature-newsfeed-p2": "El servicio de noticias le permite crear publicaciones, responder y dar me gusta a las publicaciones de otros reclutadores y candidatos y, en el caso de los candidatos, también puede usar el servicio de noticias para iniciar una sesión de mensajería instantánea y ver su perfil o CV.",
+	"feature-newsfeed-title": "Servicio de noticias de TI",
 	"FINLAND": "Finlandia",
 	"FINNISH": "Finlandés",
 	"FINTECH": "Fintech",
