--- a/recruit-gui/src/assets/i18n/fr.json
+++ b/recruit-gui/src/assets/i18n/fr.json
@@ -98,6 +98,7 @@
 	"arenella-app-menu-contact": "Contact",
 	"arenella-app-menu-emails": "Courriels",
 	"arenella-app-menu-faq": "Faq",
+	"arenella-app-menu-features": "Produits",
 	"arenella-app-menu-job-board": "Emplois",
 	"arenella-app-menu-jobs": "Emplois",
 	"arenella-app-menu-login": "Se connecter",
@@ -836,6 +837,40 @@
 	"expres": "Expres",
 	"EXPRES": "Expres",
 	"failure": "Échec",
+	"featier-cv-database-title (2)": "Base de données de CV des candidats",
+	"feature-cv-database-profile-page-itm1": "Recherche à l'aide des filtres de recherche traditionnels",
+	"feature-cv-database-profile-page-itm2": "Recherchez en collant ou en téléchargeant une copie du descriptif de poste",
+	"feature-cv-database-profile-page-itm3": "Effectuez votre recherche en saisissant directement vos critères dans le champ de recherche.",
+	"feature-cv-database-profile-page-itm4": "Enregistrez des candidats informatiques intéressants",
+	"feature-cv-database-profile-page-itm5": "Consultez les CV des candidats en informatique directement dans le formulaire.",
+	"feature-cv-database-profile-page-itm6": "Téléchargez la version originale du CV des candidats en informatique",
+	"feature-cv-database-profile-page-itm7": "Créer des requêtes de recherche enregistrées",
+	"feature-cv-database-profile-page-itm8": "Recevez des alertes lorsque de nouveaux candidats informatiques correspondant à une requête enregistrée sont ajoutés.",
+	"feature-cv-database-profile-page-p1": "La fonctionnalité de base de données de CV des candidats vous permet de faire ce qui suit",
+	"feature-cv-database-profile-page-title": "Page de profil du candidat en informatique",
+	"feature-cv-database-search-page-p1": "La base de données de CV de candidats en informatique permet aux recruteurs de consulter les profils de candidats existants. Vous disposez de fonctionnalités de recherche avancées pour trouver précisément les candidats que vous recherchez.",
+	"feature-cv-database-search-page-p2": "Le système vous proposera les profils les plus pertinents en fonction de vos critères de recherche. Si un candidat ne correspond pas exactement à vos attentes, vous serez informé de sa pertinence pour chaque profil proposé, ce qui vous permettra de déterminer s'il convient à vos besoins.",
+	"feature-cv-database-search-page-title": "Page de recherche de candidats en informatique",
+	"feature-cv-database-title": "Base de données de CV des candidats",
+	"feature-im-title": "Messagerie instantanée informatique",
+	"feature-im-view-cv": "Consultation des CV des candidats en informatique",
+	"feature-im-view-cv-p1": "La messagerie instantanée permet aux recruteurs informatiques de discuter en temps réel avec les candidats. Si le candidat n'est pas en ligne, il recevra un courriel l'informant qu'il a reçu un message non lu et pourra vous contacter ultérieurement.",
+	"feature-im-view-cv-p2": "Pendant que vous utilisez la messagerie instantanée, vous pourrez également ouvrir une copie de leur CV dans une fenêtre séparée. Cela vous permettra d'avoir toutes les informations à portée de main lorsque vous discuterez avec les candidats.",
+	"feature-im-view-profile": "Consultation du profil d'un candidat en informatique",
+	"feature-im-view-profile-p1": "Pendant votre conversation avec un candidat en informatique, vous pouvez également ouvrir un résumé de son profil dans une fenêtre séparée. Cela vous permet de consulter les informations les plus importantes le concernant, présentées de manière structurée, et de trouver facilement les renseignements dont vous avez besoin sans avoir à lire l'intégralité de son CV.",
+	"feature-jobboard-p1": "La plateforme d'emploi informatique permet aux recruteurs de publier leurs offres d'emploi directement auprès des candidats. Ces derniers peuvent consulter les détails des postes proposés et postuler directement s'ils estiment correspondre au profil recherché.",
+	"feature-jobboard-p2": "Lorsque vous publiez une offre d'emploi sur notre plateforme dédiée aux profils informatiques, les candidats ayant créé une alerte recevront un e-mail. Ces alertes sont personnalisées en fonction du poste recherché par chaque candidat, ce qui signifie que les candidats qui les reçoivent recherchent effectivement le type de poste que vous proposez. Les candidats peuvent créer une alerte même sans être inscrits sur le site. Cette plateforme offre ainsi davantage de possibilités de trouver le candidat idéal qu'en consultant uniquement une CVthèque.",
+	"feature-jobboard-p3": "La plateforme d'offres d'emploi en informatique permet aux candidats de filtrer les résultats par zone géographique, comme le Benelux, la zone DACH ou l'Europe du Sud. Ils peuvent également filtrer par pays et type de contrat afin de trouver rapidement un emploi ou une mission en informatique qui leur convient.",
+	"feature-jobboard-title": "Tableau d'emploi informatique",
+	"feature-marketplace-offers": "Offre aux candidats en informatique",
+	"feature-marketplace-offers-p1": "Le marché de l'emploi informatique répertorie les postes vacants en informatique qui recherchent des candidats. Ces postes sont généralement publiés par des agences de recrutement spécialisées qui ont un poste à pourvoir et sont disposées à collaborer avec d'autres agences pour trouver des candidats.",
+	"feature-marketplace-offers-p2": "La plateforme IT Marketplace sert de premier point de contact. Vous pouvez consulter la fiche de poste et, si vous avez ou pouvez trouver un candidat adéquat, contacter l'agence informatique qui publie l'annonce afin de définir le contrat et la marge en cas de recrutement réussi.",
+	"feature-marketplace-requests": "Demande de candidats en informatique",
+	"feature-marketplace-requests-p1": "La plateforme IT Marketplace vous permet, en tant que recruteur informatique, de publier une offre d'emploi pour un poste vacant. D'autres recruteurs pourront consulter la description du poste et vous contacter directement pour vous proposer des candidats disponibles.",
+	"feature-marketplace-title": "Marché informatique",
+	"feature-newsfeed-p1": "Le fil d'actualités est similaire à ce que l'on trouve sur la plupart des réseaux sociaux. Il permet aux recruteurs et aux candidats du secteur informatique de se rencontrer et de publier des informations sur les postes vacants, la disponibilité des candidats ou tout autre sujet pertinent concernant le marché de l'emploi informatique en Europe.",
+	"feature-newsfeed-p2": "Le fil d'actualité vous permet de créer des publications, de répondre aux publications d'autres recruteurs et candidats et de les aimer. Dans le cas des candidats, vous pouvez également utiliser le fil d'actualité pour démarrer une session de messagerie instantanée et consulter leur profil ou leur CV.",
+	"feature-newsfeed-title": "Fil d'actualité informatique",
 	"FINLAND": "Finlande",
 	"FINNISH": "Finlandais",
 	"FINTECH": "Fintech",
