--- a/recruit-gui/src/assets/i18n/it.json
+++ b/recruit-gui/src/assets/i18n/it.json
@@ -98,6 +98,7 @@
 	"arenella-app-menu-contact": "Contatto",
 	"arenella-app-menu-emails": "E-mail",
 	"arenella-app-menu-faq": "Faq",
+	"arenella-app-menu-features": "Prodotti",
 	"arenella-app-menu-job-board": "Lavoro",
 	"arenella-app-menu-jobs": "Lavori",
 	"arenella-app-menu-login": "Login",
@@ -836,6 +837,40 @@
 	"expres": "Expres",
 	"EXPRES": "Expres",
 	"failure": "Fallimento",
+	"featier-cv-database-title (2)": "Database dei CV dei candidati",
+	"feature-cv-database-profile-page-itm1": "Cerca utilizzando i filtri di ricerca tradizionali",
+	"feature-cv-database-profile-page-itm2": "Cerca incollando o caricando una copia delle specifiche del lavoro",
+	"feature-cv-database-profile-page-itm3": "Cerca digitando le tue esigenze direttamente nella casella di ricerca",
+	"feature-cv-database-profile-page-itm4": "Salva candidati IT interessanti",
+	"feature-cv-database-profile-page-itm5": "Visualizza i CV dei candidati IT in linea",
+	"feature-cv-database-profile-page-itm6": "Scarica la versione originale del CV dei candidati IT",
+	"feature-cv-database-profile-page-itm7": "Crea query di ricerca salvate",
+	"feature-cv-database-profile-page-itm8": "Ricevi avvisi quando vengono aggiunti nuovi candidati IT che corrispondono a una query salvata",
+	"feature-cv-database-profile-page-p1": "La funzione Database CV Candidati consente di effettuare le seguenti operazioni:",
+	"feature-cv-database-profile-page-title": "Pagina del profilo del candidato IT",
+	"feature-cv-database-search-page-p1": "Il database dei CV dei candidati IT consente ai reclutatori di effettuare ricerche tra i profili dei candidati esistenti. Sono disponibili funzionalità di ricerca avanzate per trovare esattamente i candidati che stai cercando.",
+	"feature-cv-database-search-page-p2": "In base ai criteri di ricerca, il sistema restituirà le migliori corrispondenze disponibili. Qualora un candidato non corrisponda esattamente ai tuoi criteri, ti verrà mostrata l'accuratezza di ciascuno dei candidati restituiti, consentendoti di determinare se il candidato è adatto alle tue esigenze.",
+	"feature-cv-database-search-page-title": "Pagina di ricerca candidati IT",
+	"feature-cv-database-title": "Database dei CV dei candidati",
+	"feature-im-title": "Messaggistica istantanea informatica",
+	"feature-im-view-cv": "Visualizzazione dei CV dei candidati IT",
+	"feature-im-view-cv-p1": "La funzionalità di messaggistica istantanea consente ai recruiter IT di chattare in tempo reale con i candidati IT. Se il candidato non è online, riceverà un'e-mail che lo informerà di un messaggio non letto e potrà contattarti in seguito.",
+	"feature-im-view-cv-p2": "Mentre utilizzi la chat di messaggistica istantanea, potrai anche aprire una copia del loro CV in una finestra separata. Questo ti permetterà di avere tutti i dettagli a portata di mano quando parlerai con i candidati.",
+	"feature-im-view-profile": "Visualizzazione del profilo del candidato IT",
+	"feature-im-view-profile-p1": "Mentre parla con un candidato IT, puoi anche aprire un riepilogo del suo profilo in una finestra separata. Questo ti consente di visualizzare le informazioni più importanti sui candidati IT in un formato strutturato, il che significa che puoi trovare facilmente le informazioni di cui hai bisogno senza dover leggere l'intero CV.",
+	"feature-jobboard-p1": "La bacheca di lavoro IT consente ai recruiter del settore IT di pubblicizzare le posizioni aperte direttamente ai candidati. I candidati IT che visitano la bacheca di lavoro possono visualizzare i dettagli delle posizioni pubblicate e candidarsi direttamente se ritengono di essere adatti a quelle posizioni.",
+	"feature-jobboard-p2": "Quando pubblichi un annuncio sulla bacheca di lavoro IT, tutti i candidati IT con un avviso riceveranno un'e-mail. Gli avvisi sono personalizzati in base al ruolo desiderato dal singolo candidato, il che significa che i candidati che ricevono l'avviso saranno alla ricerca del tipo di ruolo che stai pubblicizzando. I candidati possono creare un avviso anche se non sono registrati al sito. Questo offre maggiori opportunità di trovare un candidato IT adatto rispetto al semplice utilizzo del database dei CV.",
+	"feature-jobboard-p3": "La bacheca IT Job Board offre ai candidati IT la possibilità di filtrare per zone specifiche come Benelux, DACH o Europa meridionale. Possono anche filtrare per singoli paesi e tipologie contrattuali per trovare rapidamente posizioni o contratti IT adatti alle loro esigenze.",
+	"feature-jobboard-title": "Bacheca di lavoro IT",
+	"feature-marketplace-offers": "Offri candidati IT",
+	"feature-marketplace-offers-p1": "L'IT Marketplace contiene un elenco di posizioni aperte nel settore IT che richiedono candidati. Queste posizioni IT vengono solitamente pubblicizzate da agenzie di reclutamento IT che hanno una posizione da ricoprire e sono disponibili a collaborare con altre agenzie di reclutamento IT per ricoprire quella posizione.",
+	"feature-marketplace-offers-p2": "L'IT Marketplace offre un primo punto di contatto. Puoi leggere le specifiche del lavoro e, se hai già trovato un candidato idoneo, puoi contattare l'agenzia IT che pubblicizza il ruolo e concordare il contratto e il margine di guadagno in caso di assunzione.",
+	"feature-marketplace-requests": "Richiedi candidati IT",
+	"feature-marketplace-requests-p1": "L'IT Marketplace ti consente, in qualità di recruiter IT, di pubblicare annunci per una posizione IT aperta che hai bisogno di aiuto per ricoprire. Altri recruiter IT potranno leggere la descrizione del lavoro e contattarti direttamente per proporti i candidati IT più adatti tra quelli disponibili.",
+	"feature-marketplace-title": "Mercato informatico",
+	"feature-newsfeed-p1": "Il news feed è simile a quello che ci si aspetterebbe di trovare sulla maggior parte dei social media. È un luogo in cui sia i recruiter IT che i candidati IT possono incontrarsi per pubblicare informazioni su posizioni aperte nel settore IT, disponibilità di candidati IT o qualsiasi cosa rilevante per il mercato del lavoro IT in Europa.",
+	"feature-newsfeed-p2": "Il newsfeed ti consente di creare post, rispondere e mettere \"Mi piace\" ai post di altri reclutatori e candidati e, nel caso dei candidati, puoi anche utilizzare il newsfeed per avviare una sessione di messaggistica istantanea e visualizzare il loro profilo o CV.",
+	"feature-newsfeed-title": "Feed di notizie informatiche",
 	"FINLAND": "Finlandia",
 	"FINNISH": "Finlandese",
 	"FINTECH": "Fintech",
