--- a/recruit-gui/src/assets/i18n/nl.json
+++ b/recruit-gui/src/assets/i18n/nl.json
@@ -98,6 +98,7 @@
 	"arenella-app-menu-contact": "Contact",
 	"arenella-app-menu-emails": "E-mails",
 	"arenella-app-menu-faq": "Faq",
+	"arenella-app-menu-features": "Producten",
 	"arenella-app-menu-job-board": "Banen",
 	"arenella-app-menu-jobs": "Banen",
 	"arenella-app-menu-login": "Log in",
@@ -836,6 +837,40 @@
 	"expres": "Expres",
 	"EXPRES": "Expres",
 	"failure": "Fout",
+	"featier-cv-database-title (2)": "CV-database van kandidaten",
+	"feature-cv-database-profile-page-itm1": "Zoeken met behulp van traditionele zoekfilters",
+	"feature-cv-database-profile-page-itm2": "Zoeken door een kopie van de functieomschrijving te plakken of te uploaden.",
+	"feature-cv-database-profile-page-itm3": "Zoek door uw zoektermen direct in het zoekvak in te typen.",
+	"feature-cv-database-profile-page-itm4": "Bewaar interessante IT-kandidaten",
+	"feature-cv-database-profile-page-itm5": "Bekijk de cv's van IT-kandidaten direct online.",
+	"feature-cv-database-profile-page-itm6": "Download de originele versie van het cv voor IT-kandidaten",
+	"feature-cv-database-profile-page-itm7": "Maak opgeslagen zoekopdrachten",
+	"feature-cv-database-profile-page-itm8": "Ontvang meldingen wanneer er nieuwe IT-kandidaten worden toegevoegd die voldoen aan een opgeslagen zoekopdracht.",
+	"feature-cv-database-profile-page-p1": "Met de functie 'CV-database voor kandidaten' kunt u het volgende doen:",
+	"feature-cv-database-profile-page-title": "Profielpagina van een IT-kandidaat",
+	"feature-cv-database-search-page-p1": "De cv-database voor IT-kandidaten stelt recruiters in staat om te zoeken in bestaande kandidaatprofielen. U beschikt over geavanceerde zoekmogelijkheden om precies de kandidaten te vinden die u zoekt.",
+	"feature-cv-database-search-page-p2": "Het systeem zal, op basis van uw zoekcriteria, de best beschikbare matches weergeven. Als een kandidaat niet exact overeenkomt, wordt de nauwkeurigheid van elke gevonden kandidaat getoond, zodat u kunt bepalen of de kandidaat geschikt is voor uw behoeften.",
+	"feature-cv-database-search-page-title": "Zoekpagina voor IT-kandidaten",
+	"feature-cv-database-title": "CV-database van kandidaten",
+	"feature-im-title": "IT-instantmessaging",
+	"feature-im-view-cv": "CV's van IT-kandidaten bekijken",
+	"feature-im-view-cv-p1": "De instant messaging-functie stelt IT-recruiters in staat om in realtime te chatten met IT-kandidaten. Als de kandidaat niet online is, ontvangt hij of zij een e-mailmelding met een ongelezen bericht, zodat er later contact kan worden opgenomen.",
+	"feature-im-view-cv-p2": "Tijdens het chatten via de instant messaging-functie kunt u ook een kopie van hun cv in een apart venster openen. Zo heeft u alle gegevens bij de hand wanneer u met de kandidaten spreekt.",
+	"feature-im-view-profile": "Profiel van IT-kandidaat bekijken",
+	"feature-im-view-profile-p1": "Tijdens een chatgesprek met een IT-kandidaat kunt u ook een samenvatting van hun profiel in een apart venster openen. Hierdoor ziet u de belangrijkste informatie over de IT-kandidaten in een gestructureerd formaat, zodat u gemakkelijk de benodigde informatie kunt vinden zonder hun hele cv te hoeven doorlezen.",
+	"feature-jobboard-p1": "Via het IT-vacatureplatform kunnen IT-recruiters hun openstaande vacatures rechtstreeks aan kandidaten tonen. IT-kandidaten die het platform bezoeken, kunnen de details van de aangeboden functies bekijken en direct solliciteren als ze denken dat ze geschikt zijn voor de functie.",
+	"feature-jobboard-p2": "Wanneer u een vacature plaatst op het IT-vacatureplatform, ontvangt elke IT-kandidaat met een melding een e-mail. De meldingen zijn afgestemd op de gewenste functie van de individuele kandidaat, wat betekent dat kandidaten die de melding ontvangen, op zoek zijn naar het type functie dat u adverteert. Kandidaten kunnen een melding aanmaken, zelfs als ze niet geregistreerd zijn op de site. Dit biedt meer mogelijkheden om een ​​geschikte IT-kandidaat te vinden dan wanneer u alleen de cv-database gebruikt.",
+	"feature-jobboard-p3": "Het IT-vacatureplatform biedt IT-kandidaten de mogelijkheid om te filteren op specifieke regio's zoals de Benelux, DACH of Zuid-Europa. Ze kunnen ook filteren op individuele landen en contracttypen om snel geschikte IT-banen of IT-contracten te vinden.",
+	"feature-jobboard-title": "IT-vacaturebank",
+	"feature-marketplace-offers": "Bied IT-kandidaten een kans",
+	"feature-marketplace-offers-p1": "De IT Marketplace bevat een lijst met openstaande IT-functies waarvoor kandidaten worden gezocht. Deze IT-functies worden doorgaans ge adverteerd door IT-recruitmentbureaus die een vacature hebben en openstaan ​​voor samenwerking met andere IT-recruitmentbureaus om die vacature te vervullen.",
+	"feature-marketplace-offers-p2": "De IT-marktplaats biedt een eerste aanspreekpunt. U kunt de functiebeschrijving lezen en, als u een geschikte kandidaat heeft of kunt vinden, contact opnemen met het IT-bureau dat de vacature aanbiedt. Samen kunt u dan afspraken maken over het contract en de commissie in geval van een succesvolle plaatsing.",
+	"feature-marketplace-requests": "Aanvraag voor IT-kandidaten",
+	"feature-marketplace-requests-p1": "Via de IT Marketplace kunt u als IT-recruiter een openstaande IT-functie adverteren die u wilt laten invullen. Andere IT-recruiters kunnen de functiebeschrijving lezen en rechtstreeks contact met u opnemen om geschikte IT-kandidaten uit hun aanbod voor te stellen.",
+	"feature-marketplace-title": "IT-marktplaats",
+	"feature-newsfeed-p1": "De nieuwsfeed is vergelijkbaar met wat je op de meeste sociale mediasites aantreft. Het is een plek waar zowel IT-recruiteerders als IT-kandidaten samenkomen om informatie te plaatsen over openstaande IT-functies, de beschikbaarheid van IT-kandidaten of alles wat relevant is voor de IT-arbeidsmarkt in Europa.",
+	"feature-newsfeed-p2": "Via de nieuwsfeed kun je berichten plaatsen, reageren op berichten van andere recruiters en kandidaten en deze liken. Kandidaten kunnen de nieuwsfeed ook gebruiken om een ​​chatgesprek te starten en hun profiel of cv te bekijken.",
+	"feature-newsfeed-title": "IT-nieuwsfeed",
 	"FINLAND": "Finland",
 	"FINNISH": "Fins",
 	"FINTECH": "Fintech",
